# routesCtrl/index.js
@@ -6,6 +6,7 @@ routes.get('/', people.homeRoute);
 routes.get('/lindsey', people.lindseyRoute);
 routes.get('/benjamin', people.benjaminRoute);
 routes.use('/contacts', require('./contacts'));
+routes.use('/apiDocs', require('./swagger'));
 
 
 module.exports = routes;
