# routesCtrl/swagger.js
@@ -1,8 +1,9 @@
+const express = require('express');
 const routes = express.Router();
 const swaggerUI = require('swagger-ui-express');
 const swaggerDocument = require('../swagger.json');
 
-routes.use('/apiDocs', swaggerUI.serve);
-routes.get('/apiDocs', swaggerUI.setup(swaggerDocument));
+routes.use('/', swaggerUI.serve);
+routes.get('/', swaggerUI.setup(swaggerDocument));
 
 module.exports = routes;
